# snippet

./: .gitmodules  README.md
AkkaHello/: .gitignore  build.sbt
Cpp1z_Modules/FirstTry/: compile.sh  module  module.cxx  submodule.cxx  submodule.pcm
Cpp_Coroutine/: .gitignore
Cpp_Coroutine/coroutine-study/: coroutine-study.sln
Cpp_Drop_In_Another_Thread/: README.md  dotest  main.cc
Cpp_SFINAE/: simple.cpp
Go_ATourOfGo/: .gitignore  config0.json  config1.json  config2.json  env.ps1
Go_AwsLambdaSqsSns/: README.md  go.mod  go.sum  main.go
Go_AwsLambdaSqsSns/kafkacli/: kafkacli.go
Go_AwsLambdaSqsSns/sqslambda/: sqslambda.go
PPL_TorrentCrawler/: TorrentCrawler.sln
PPL_TorrentCrawler/TorrentCrawler/: ReadMe.txt  TorrentCrawler.cpp  TorrentCrawler.vcxproj  TorrentCrawler.vcxproj.filters  results.html  stdafx.cpp
Python_Asyncio_Cffi/: sample_cli.py  sample_srv.py
Python_Bitcoin/: bitcoinaddr.py  bitcoincli.py
Python_FlaskSample/: sample1.py
Python_Pygments/: .gitignore  .test.py.swp  sample.cpp  test.py
Python_TorrentCrawler/: requirements.txt  torrent.py  torrentdb.py  torrentlee_crawl.py
Python_asyncio_binary_echo/pyclient2/: pyvenv.cfg
Rust_Amethyst/pong/: .gitignore  README.md
Rust_Book_HttpServer/: 404.html  Cargo.toml  index.html
Rust_Book_HttpServer/src/: main.rs
Rust_Dir/dircopy/: .gitignore  Cargo.toml  config.toml
Rust_Dir/first/: Cargo.toml
Rust_Dir/second/: Cargo.toml
Rust_Error/implerror/: Cargo.toml
Rust_EssentialNodeBook/: .gitignore
Rust_EssentialNoteBook/ex/: Cargo.toml
Rust_HttpClient/httpcli/: Cargo.toml
Rust_NatsClient/natsclient/: Cargo.toml
Rust_Odbc_Api/: Cargo.toml  TODO.md  userprofiledb.sql
Rust_Odbc_Api/src/: config.rs  main.rs  odbc_api_ext.rs  odbc_connector.rs  protocol.rs
Rust_Scrapper/scrapper/: Cargo.toml
Rust_StsProto/stsproto/: Cargo.toml  input.spr
Rust_TcpChat/chat/: Cargo.toml
Rust_TcpChat/chat2/: Cargo.toml
Rust_TcpEcho/echo/: Cargo.toml
Rust_Tide/todo/: .env  Cargo.toml
Rust_Tide/todo/migrations/2019-12-29-143659_create_posts/: up.sql
Rust_Tide/todo/migrations/2019-12-30-052602_create_note/: down.sql  up.sql
Rust_Tide/todo/src/: datacli.rs  global.rs  handler.rs  inmemory.rs  lib.rs  main.rs  model.rs  note.rs  schema.rs  sfs.rs
Rust_Tide/todo/static_files/: foo.txt  index.html
Rust_TokioRs/echoserver02/: Cargo.toml  build.rs
Rust_TokioRs/echoserver02/protocols/: AuthServer.proto  Common.proto
Rust_TokioRs/echoserver02/src/protos/: AuthServer.rs  Common.rs  mod.rs
Rust_TokioRs/gostyle/: Cargo.toml  README.md  TODO.md
Rust_TokioRs/gostyle/src/: lib.rs  main.rs  server.rs  server_connection.rs
Rust_TokioRs/hello/: Cargo.toml  README.md  build.rs  sample.json  sample2.json
Rust_TokioRs/hello/protos/: ping.proto  sample.proto
Rust_TokioRs/hello/src/: lib.rs  main.rs
Rust_TokioRs/hello/src/protos/: ping.rs  sample.rs
Rust_Winapi_Serde/run/: .gitignore  Cargo.toml  README.md
Rust_Winapi_Serde/run/src/: app.rs  file_read.rs  lib.rs  main.rs  process_util.rs
WebRtc_PeerConnectionTutorial/: .gitignore  WebRtcPeerConnectionTutorial.sln
Win32_DllInjection_CreateRemoteThread/: RADME.md
Win32_DuplicateSocket/: README.md
Win32_Fiber/: README.md
Win32_NewThreadPoolingApis/: README.md
Win32_Upnp/: NatTraversal.sln  README.md
my-torrent-daemon/: README.md  main.go
(+166 files in other folders)
