[package]
name = "rust_odbc_api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
encoding = "0.2.33"
odbc-api = "0.27.0"
tokio = { version = "1.13.1", features = [ "full" ] }
log = "0.4.14"
xmltree = "0.10.3"
serde = { version = "1.0.129", features = [ "derive" ] }
serde_json = "1.0.66"
serde-xml-rs = "0.5.0"

[target.'cfg(windows)'.dependencies]
rdkafka = { version = "0.26.0", features = [ "cmake-build" ] }

[target.'cfg(unix)'.dependencies]
rdkafka = "0.26.0"