[package]
name = "todo"
version = "0.1.0"
authors = ["jinsung <c86j224s@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.5"
async-std = { version = "1.4", features = [ "attributes" ] }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
http = "0.2"
futures = "0.3"
mime = "0.3"
diesel = { version = "1.4", features = [ "mysql", "chrono" ] }
dotenv = "0.15"
chrono = { version = "0.4", features = [ "serde" ] }