[package]
name = "echoserver02"
version = "0.1.0"
authors = ["jinsung <c86j224s@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = [ "full" ] }
bytes = "0.5"
protobuf = "2.10"

[build-dependencies]
protoc-rust = "2.10"