[package]
name = "gostyle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = [ "full" ]}
bytes = "1"
async-trait = "0.1.52"
rand = { version = "0.8.4", features = [ "std", "std_rng" ] }
anyhow = "1.0"
thiserror = "1.0"
# protobuf = "2"

# [dev-dependencies]
# lazy_static = "1.4.0"

# [build-dependencies]
# protoc-rust = "2"

[[bin]]
name = "echoserver"
path = "src/bin/echoserver/main.rs"
