[package]
name = "hello"
version = "0.1.0"
authors = ["js <c86j224s@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mio = "0.6"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
tokio = "0.1"

[build-dependencies]
protoc-rust = "2.0"
