[package]
name = "run"
version = "0.1.0"
authors = ["c86j224s"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
psutil = "1.5"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [ "winuser", "psapi", "processthreadsapi" ] }

