[package]
name = "run"
version = "0.1.0"
authors = ["c86j224s"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
argparse = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [ "winuser", "psapi", "processthreadsapi" ] }

[target.'cfg(not(windows))'.dependencies]
psutil = "1.5"
